[gd_scene load_steps=2 format=3 uid="uid://vuh62t20qc5l"]

[ext_resource type="Script" uid="uid://c7rjrly2jndwv" path="res://menu/options_menu/settings.gd" id="1_4mreu"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_4mreu")

[node name="HeaderLabel" type="Label" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.14
offset_right = 1.0
offset_bottom = 5.28

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = -1
anchor_top = 0.196
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.00800323
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="FullscreenCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="ShakeCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Camera shake"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Master"

[node name="VolumeSlider" type="HSlider" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[connection signal="toggled" from="ScrollContainer/VBoxContainer/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/ShakeCheck" to="." method="_on_shake_check_toggled"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
